--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,14 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: IOT Design Team Project
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  This site is for the subject "Basic Computer System Design" team assignment. An assignment is for basically designing concept of IOT(Internet of Things).
+title: Hemang Kumar
+email: hemangsk@gmail.com
+
+#write html inside the double quotes to display in jumbotron
+description: "<h3>Hello, world!</h3><h1>DevJournal</h1><h3>Awesome Jekyll Theme for Developers!</h3>Hope you like it!"
+
+
+
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
