--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,11 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Hemang Kumar
-email: hemangsk@gmail.com
+title: Com_Sys_Des
+email: whalsrms7040@koreatech.ac.kr
 
 #write html inside the double quotes to display in jumbotron
-description: "<h3>Hello, world!</h3><h1>hello, world</h1><h3>Awesome Jekyll Theme for Developers!</h3>Hope you like it!"
+description: "<h3>IoT_TeamProject</h3><h1>Smart Door Lock</h1><h3>Awesome Smart Door Lock Developers!</h3>"
 
 
 
